tests/baselines/reference/gettersAndSettersAccessibility.errors.txt
==== tests/cases/compiler/gettersAndSettersAccessibility.ts (2 errors) ====
    class C99 {
        private get Baz():number { return 0; }
                 ~~~
!!! error TS2127: Getter and setter accessors do not agree in visibility.
        public set Baz(n:number) {} // error - accessors do not agree in visibility
                ~~~
!!! error TS2127: Getter and setter accessors do not agree in visibility.
    }
    